--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: upi_india
 description: A flutter plugin to do UPI transaction through different apps in Android.
-version: 1.1.1
-author: Md.Azharuddin<mdazharuddin1011999@gmail.com>
+version: 1.1.2
+# author: Md.Azharuddin<mdazharuddin1011999@gmail.com>
 homepage: https://github.com/mdazharuddin1011999/UPI-Plugin-Flutter
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.10.0 <2.0.0"
 
 dependencies:
   flutter:
@@ -25,8 +26,11 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.az.upi_india
-    pluginClass: UpiIndiaPlugin
+    platforms:
+      android:
+        package: com.az.upi_india
+        pluginClass: UpiIndiaPlugin
+    
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
