--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 2.2.0+1
 homepage: https://github.com/mdazharuddin1011999/UPI-Plugin-Flutter
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 <2.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
