--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,52 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.az.upi_india">
+  <queries>
+    <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <data android:scheme="upi" />
+    </intent>
+  </queries>
+  <queries>
+    <package android:name="com.lcode.allahabadupi" />
+    <package android:name="in.amazon.mShop.android.shopping" />
+    <package android:name="com.upi.axispay" />
+    <package android:name="com.bankofbaroda.upi" />
+    <package android:name="in.org.npci.upiapp" />
+    <package android:name="com.infra.boiupi" />
+    <package android:name="com.infrasofttech.centralbankupi" />
+    <package android:name="in.cointab.app" />
+    <package android:name="com.lcode.corpupi" />
+    <package android:name="com.lcode.csbupi" />
+    <package android:name="com.cub.wallet.gui" />
+    <package android:name="com.dbs.in.digitalbank" />
+    <package android:name="com.olive.dcb.upi" />
+    <package android:name="com.equitasbank.upi" />
+    <package android:name="com.finopaytech.bpayfino" />
+    <package android:name="com.freecharge.android" />
+    <package android:name="com.google.android.apps.nbu.paisa.user" />
+    <package android:name="com.mgs.hsbcupi" />
+    <package android:name="com.csam.icici.bank.imobile" />
+    <package android:name="com.mgs.induspsp" />
+    <package android:name="com.lcode.smartz" />
+    <package android:name="com.khaalijeb.inkdrops" />
+    <package android:name="com.msf.kbank.mobile" />
+    <package android:name="com.infrasofttech.mahaupi" />
+    <package android:name="com.mipay.in.wallet" />
+    <package android:name="com.mipay.wallet.in" />
+    <package android:name="com.mobikwik_new" />
+    <package android:name="com.mgs.obcbank" />
+    <package android:name="net.one97.paytm" />
+    <package android:name="com.idbibank.paywiz" />
+    <package android:name="com.enstage.wibmo.hdfc" />
+    <package android:name="com.phonepe.app" />
+    <package android:name="com.fss.pnbpsp" />
+    <package android:name="com.mobileware.upipsb" />
+    <package android:name="com.rblbank.upi" />
+    <package android:name="com.realmepay.payments" />
+    <package android:name="com.sbi.upi" />
+    <package android:name="com.truecaller" />
+    <package android:name="com.fss.unbipsp" />
+    <package android:name="com.fss.vijayapsp" />
+    <package android:name="com.YesBank" />
+  </queries>
 </manifest>
